--- a/bootique-job/pom.xml
+++ b/bootique-job/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>io.bootique.job</groupId>
         <artifactId>bootique-job-parent</artifactId>
-        <version>1.1</version>
+        <version>1.1-h2op.1</version>
     </parent>
 
     <artifactId>bootique-job</artifactId>
