--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>io.bootique.job</groupId>
     <artifactId>bootique-job-parent</artifactId>
-    <version>1.1</version>
+    <version>1.1-h2op.1</version>
     <packaging>pom</packaging>
 
     <name>bootique-job-parent: Job framework with Bootique Integration</name>
@@ -42,7 +42,7 @@
     </modules>
 
     <properties>
-        <bootique.version>${project.version}</bootique.version>
+        <bootique.version>1.1</bootique.version>
         <!-- TODO: we are bringing the entire huge Spring framework to just use
             a few scheduling classes, and no injection -->
         <spring-version>4.3.20.RELEASE</spring-version>
@@ -50,16 +50,16 @@
     </properties>
 
     <scm>
-        <developerConnection>scm:git:ssh://git@github.com/bootique/bootique-job</developerConnection>
-        <url>https://github.com/bootique/bootique-job</url>
+        <developerConnection>scm:git:ssh://git@github.com/akoira/bootique-job</developerConnection>
+        <url>https://github.com/akoira/bootique-job</url>
         <tag>1.1</tag>
     </scm>
 
     <distributionManagement>
         <repository>
-            <id>bintray-bootique-releases</id>
-            <name>bintray-bootique-releases</name>
-            <url>https://api.bintray.com/maven/bootique/releases/bootique-job/;publish=1</url>
+            <id>maven-releases</id>
+            <name>maven-releases</name>
+            <url>https://maven.nhl.com/repository/maven-releases</url>
         </repository>
     </distributionManagement>
 
